k8s/base/tdarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: tdarr.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tdarr
            port:
              number: 8265
